# dashboard

./: LICENSE  README.md  meson.build
data/: meson.build
po/: POTFILES  meson.build
src/: main.c  meson.build
src/gui/: background.ui~  gcal-application.c  gcal-application.h  gcal-background.c  gcal-background.h  gcal-background.ui  gcal-bar-system.c  gcal-bar-system.h  gcal-bar-system.ui  gcal-bar-system.ui~  gcal-bar-user.c  gcal-bar-user.h  gcal-bar-user.ui  gcal-bar-user.ui~  gcal-window.c  gcal-window.h  gcal-window.ui  gcal-window.ui~  gui.gresource.xml  meson.build  tests-window.ui~
